fix: 修复多个问题
1. 条件节点支持自然语言描述(prompt)和结构化配置组合
2. 修复Java 8兼容性问题(使用Files.readAllBytes替代Files.readString)
3. 配置Jackson忽略未知字段，支持包含prompt的流程文件
4. 优化用例名称生成，区分不同路径
5. 前端添加hover提示显示完整名称

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>